--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@
   height: 70%;
   background-color: #957bbe;
   position: absolute;
-  right: 40px;
+  right: 5%;
   top: 10%;
   border-radius: 10px;
   display: flex;
@@ -67,5 +67,111 @@
   width: 90%;
   height: 90%;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Designing Pen and eraser Picker  */
+.pen_picker_container,
+.eraser_picker_container {
+  width: 35%;
+  height: 70%;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid red; */
+  position: absolute;
+  top: 10%;
+  left: 10%;
+}
+.pen_picker_container {
+}
+.eraser_picker_container {
+}
+.pen_container,
+.eraser_container {
+  /* border: 1px solid black; */
+  background-color: white;
+  display: inline-block;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 40%;
+  border-radius: 5px 0px 0px 5px;
+  cursor: pointer;
+}
+.pen_container {
+  position: absolute;
+  top: 6px;
+  left: 0px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(88, 88, 88);
+}
+.pen_container > img,
+.eraser_container > img {
+  width: 90%;
+  height: 90%;
+  z-index: 3;
+}
+.pen,
+.eraser {
+}
+.pen_picker_outline,
+.eraser_picker_outline {
+  width: 90%;
+  height: 100%;
+  background-color: white;
+  position: relative;
+  right: -5%;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 1% 0% 1% 0%;
+  box-sizing: border-box;
+}
+.pen_picker_outline {
+  z-index: 2;
+}
+.eraser_picker_container {
+}
+.eraser_container {
+  position: absolute;
+  bottom: 6px;
+  left: 0px;
+}
+.eraser {
+}
+
+.eraser_picker {
+}
+
+.chose_pen_outline {
+  width: 7%;
+  height: 25%;
+  margin-left: 4%;
+  margin-right: 4%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid red; */
+}
+.chose_pen_outline_inner {
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid rgb(58, 58, 58); */
+  padding: 4%;
+  border-radius: 50%;
+  box-shadow: 0px 0px 3px rgb(148, 147, 147);
+}
+.pen_chose {
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
   cursor: pointer;
 }
